--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "Hola shnes",
-    "build-css": "node-sass --include-path scss assets/styles/sass/styles.scss assets/styles/css/styles.css",
+    "build-css": "node-sass --include-path scss ./assets/styles/sass/styles.scss ./assets/styles/css/styles.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
